<resources>
    <string name="app_name">SMD_Assignments</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome_home">WELCOME HOME!</string>
    <string name="bed_nroom">Bed\nroom</string>
    <string name="living_nroom">Living\nRoom</string>
    <string name="kitchen_nroom">kitchen\nroom</string>
    <string name="bath_nroom">bath\nroom</string>
    <string name="kid_nsroom">kid\nsroom</string>
    <string name="dining_nroom">dining\nroom</string>
    <string name="light_control">Light Control</string>
    <string name="power_supply">Power Supply</string>
    <string name="textview">TextView</string>
    <string name="student_database">Student Database</string>
    <string name="student_activityone">Student_ActivityOne</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="todo">TODO</string>
    <string name="baayan_din_dhalay">Baayan - Din Dhalay</string>
    <string name="pick_mp3_file">Pick Mp3 File</string>
    <string name="name">Name</string>
    <string name="button">Button</string>
    <string name="enter_url_here">Enter Url Here</string>
    <string name="download">Download</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment3">fragment3</string>
    <string name="fragment4">fragment4</string>
    <string name="fragment2">fragment2</string>
    <string name="fragments2">fragment2</string>
    <string name="SetButton">Button</string>
</resources>